
2011-07-26

  * release 0.8
  * allow to add switches linked to files on the filesystem, like
    /sys/devices/platform/sony_laptop/.... See example config file
    for how to use

2010-08-01

  * release 0.7
  * allow glob patterns in <NAME> in the <NAME>.ignore=1 config file.
    this allows ignoring all phy at once:
      phy*.ignore=1

2009-11-06

  * fix udev rule to give correct permissions
  * add rfkill-sys.py code from Andreas Boehler, it will later on 
    integrated into the normal code

2009-08-10

  * release 0.6
  * refactor dbus and /dev/rfkill access in separate objects
  * get rid of threading, use gobject.io_add_watch on the fd
    that means also that the rfkillclient.py is now outdated
    and should be removed (thanks to Johannes Berg)

2009-08-03

  * release 0.5
  * include support for using /dev/rfkill instead of HAL/DBUS if the
    user has r/w permissions for it.
  * fix icons for quit and about

2009-06-23

  * release 0.4

2009-06-20

  * change hardware switch detection logic: now there is no special hardware
    switch property, but if *one* value has the hardoff value it is assumed
    that the hardware switch is turned on, otherwise turned off.
    Adjust the config file removing the hardswitch directive, and ignore
    the 5100AGN switch
    WARNING: You have to upate your config files!

2009-06-20

  * release 0.3
  * check every 3 secs for updates
    that could be done better maybe by changing the event loop using
    dbus/glib and registering a callback with dbus when the rfkill 
    hardware switch state has changed
  * allow rfkill.name=foobar in config file, so to rename skitches
    adjust config file to strip the sony- prefix from the names

2009-06-20

  * release 0.2

2009-06-19

  * change icon if hardware switch is off
  * do not pop up the menu if the hard switch is activated
  * add a config file, and reading from it, either from 
    /etc/rfkill-applet.config or $HOME/.rfkill-applet.config

2009-06-18
